# internal/user/domain/DTO/user.go
@@ -1,15 +1,10 @@
 package dto
 
-type UserDTO struct {
-	ID        string `json:"id"`
+type UserRequestDTO struct {
 	FirstName string `json:"first_name"`
 	LastName  string `json:"last_name"`
 	Email     string `json:"email"`
 	Password  string `json:"password"`
-	Role      string `json:"role"`
-	CreateAt  string `json:"create_at"`
-	UpdateAt  string `json:"update_at"`
-	DeletedAt string `json:"deleted_at"`
 }
 
 type UserResponseDTO struct {
@@ -20,4 +15,15 @@ type UserResponseDTO struct {
 	Role      string `json:"role"`
 	CreateAt  string `json:"create_at"`
 	UpdateAt  string `json:"update_at"`
+}
+
+type PatchRequestDTO struct {
+	FirstName string `json:"first_name"`
+	LastName  string `json:"last_name"`
+	Email     string `json:"email"`
+}
+
+type ErrorResponse struct {
+	Code  int    `json:"code"`
+	Error string `json:"error"`
 }
